hphp/hack/test/typecheck/using/using_bad_init_construct.php.exp
File "using_bad_init_construct.php", line 13, characters 22-26:
Until the initialization of $this is over, you can only call private methods
The initialization is not over because $this->x can still potentially be null (NastCheck[3004])
